fix z-index in menu burger,category

--- a/app/styles/sass/blocks/_butns-top.scss
+++ b/app/styles/sass/blocks/_butns-top.scss
@@ -3,7 +3,7 @@
     width: 100%;
     left: 0;
     background: $bg-body;
-    z-index: 100;
+    z-index: 50;
     transition: all .4s ease-in-out;
     padding-bottom: 10px;
     button{
