--- a/app/styles/sass/blocks/_menu.scss
+++ b/app/styles/sass/blocks/_menu.scss
@@ -13,6 +13,7 @@
     left: 0;
     overflow-x: hidden;
     padding-bottom: 2rem;
+    z-index: 60;
 
     &::-webkit-scrollbar {
         width: 0;
@@ -35,8 +36,11 @@
         display: flex;
         position: fixed;
         left: 70px;
-        top: 1rem;
-
+        top: 0rem;
+        z-index: 100;
+        background: $bg-body;
+        width: 100%;
+        padding-top: 1rem;
         @include media-for (null, $tablet){
             left: 15px;
         }
@@ -110,7 +114,6 @@
         background: $bg-body;
         z-index: 100;
         height: 100vh;
-        padding-top: 3rem;
         @include media-for (null, $sm){
             padding-top: 6rem;
         }
